# tharsis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 0001_initial_schema.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  engine.rs  lib.rs  main.rs  models.rs  queries.rs
src/components/ui/: button.tsx
