[package]
name = "tharsis"
version = "0.1.0"
description = "Tharsis — Blazing-fast download manager"
authors = []
edition = "2021"

[lib]
name = "tharsis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client — streaming body, no OpenSSL dependency
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
    "gzip",
    "deflate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database — sqlite (sqlx 0.8: libsqlite3 is bundled automatically via sqlx-sqlite)
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
] }

# Error handling & logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
dirs = "6"
